--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,11 +1,13 @@
 *{
   font-family: Helvetica;
-  font-size: 22px;
   color: seashell;
   background-color: black;
   opacity: 0.9;
 }
 
+.main{
+  margin: auto;
+}
 /* Header section styling */
 
 .header{
@@ -17,6 +19,7 @@
   border-bottom: 1px solid seashell;
   width: 100%;
   z-index: 20;
+  background-color: black;
 }
 
 .header img{
@@ -57,6 +60,89 @@
   text-align: center;
 }
 
-h1{
-  font-size: 30px
+.teaotm{
+  width:1000px;
+  margin: auto;
+  text-align: center;
+  justify-content: center;
+}
+
+.totmimages{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: space-between;
+}
+
+.totmimages img{
+  height: 200px;
+  width: 300px;
+}
+
+.box{
+  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg);
+  display: flex;
+  height: 500px;
+  width: 1200px;
+  background-position: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: transparent;
+  justify-content: center;
+  margin: auto;
+}
+
+.title{
+  background-color: transparent;
+  padding: 15px;
+
+}
+
+.title h1{
+  background-color: transparent;
+
+}
+
+.locations{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: transparent;
+}
+
+
+.downtown{
+  width: 300px;
+  height: 300px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  opacity: 1;
+  margin-right: 40px;
+
+}
+.east{
+  width: 300px;
+  height: 300px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  opacity: 1;
+}
+.oak{
+  margin-left: 40px;
+  width: 300px;
+  height: 300px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  opacity: 1;
+}
+
+.contact{
+  display: block;
+  text-align: center;
 }
